add idempotency to weatherService